[workspace]
resolver = "2"

members = [
    "acronym",
    "anagram",
    "armstrong-numbers",
    "beer-song",
    "binary-search",
    "book-store",
    "circular-buffer",
    "clock",
    "decimal",
    "difference-of-squares",
    "doubly-linked-list",
    "flower-field",
    "forth",
    "gigasecond",
    "grains",
    "hello-world",
    "luhn",
    "macros",
    "minesweeper",
    "ocr-numbers",
    "paasio",
    "parallel-letter-frequency",
    "react",
    "reverse-string",
    "space-age",
    "sublist",
    "xorcism",
]
