[workspace]
resolver = "3"

members = [
    "acronym",
    "all-your-base",
    "anagram",
    "armstrong-numbers",
    "beer-song",
    "binary-search",
    "book-store",
    "circular-buffer",
    "clock",
    "decimal",
    "difference-of-squares",
    "dominoes",
    "doubly-linked-list",
    "flower-field",
    "forth",
    "gigasecond",
    "grains",
    "hello-world",
    "luhn",
    "macros",
    "matrix",
    "minesweeper",
    "ocr-numbers",
    "paasio",
    "parallel-letter-frequency",
    "poker",
    "pov",
    "react",
    "reverse-string",
    "space-age",
    "sublist",
    "xorcism",
]
